Fixed 1px misalignment

--- a/style.less
+++ b/style.less
@@ -85,7 +85,7 @@ h1, h4 {
 }
 
 .ui-rangeSlider-container {
-  height: 5px;
+  height: 6px;
   border: 5px solid @primaryColor;
   
 }
@@ -128,7 +128,7 @@ h1, h4 {
 
 .ui-rangeSlider-bar {
   background: @color7;
-  height: 5px;
+  height: 6px;
   cursor: move;
   margin: 0;
   .rounded-corners(0);
